--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,1 +1,7 @@
-databaseChangeLog: []
+databaseChangeLog:
+  - include:
+      file: db/changelog/2025/11/04-01-changelog.xml
+  - include:
+      file: db/changelog/2025/11/04-02-changelog.xml
+  - include:
+      file: db/changelog/2025/11/04-03-changelog.xml
