--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/2025/11/04-03-changelog.xml
   - include:
       file: db/changelog/2025/11/06-01-changelog.xml
+  - include:
+      file: db/changelog/2025/11/06-02-changelog.xml
