--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/2025/11/06-01-changelog.xml
   - include:
       file: db/changelog/2025/11/06-02-changelog.xml
+  - include:
+      file: db/changelog/2025/11/06-03-changelog.xml
+  - include:
+      file: db/changelog/2025/11/06-04-changelog.xml
