--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/2025/11/06-03-changelog.xml
   - include:
       file: db/changelog/2025/11/06-04-changelog.xml
+  - include:
+        file: db/changelog/2025/11/07-01-changelog.xml
