--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,7 @@ databaseChangeLog:
         file: db/changelog/2025/11/07-01-changelog.xml
   - include:
       file: db/changelog/2025/11/07-02-changelog.xml
+  - include:
+      file: db/changelog/2025/11/07-03-changelog.xml
+  - include:
+      file: db/changelog/2025/11/07-04-changelog.xml
