FEAT: add DeepSeek API key configuration to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     name: optiroute
   profiles:
     active: qa
+  ai:
+    deepseek:
+      api-key: ${DEEPSEEK_APIKEY}
 
   main:
     allow-bean-definition-overriding: true
