FEAT: update application profile to use 'dev' environment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: optiroute
   profiles:
-    active: qa
+    active: dev
   ai:
     deepseek:
       api-key: ${DEEPSEEK_APIKEY}
